// Original file: proto/random.proto

import type { TodoItem as _randomPackage_TodoItem, TodoItem__Output as _randomPackage_TodoItem__Output } from '../randomPackage/TodoItem';

export interface TodoResponse {
  'tasks'?: (_randomPackage_TodoItem)[];
}

export interface TodoResponse__Output {
  'tasks'?: (_randomPackage_TodoItem__Output)[];
}
